# elnino-cuda

./: .gitignore  CMakeLists.txt  README.md  flake.nix  scaling.py  visualize.ipynb
.github/workflows/: build.yml
src/: CMakeLists.txt  elnino_cuda.cu  elnino_seq.cpp  sw_cuda.cu  sw_sequential.cpp
